# FQF

./: .gitignore  Cargo.toml  README.md
.lesson/: lessonplan.md
data/: AAPL.json  portfolio.json
docs/: main.typ  template.typ
src/: bond.rs  data.rs  lib.rs  methods.rs  portfolio.rs  stats.rs  stock_data.rs  tests.rs
src/data/: marketstack.rs
